Fix texto invisible en login

--- a/motuscar/login/static/css/auth.css
+++ b/motuscar/login/static/css/auth.css
@@ -63,7 +63,7 @@ body {
     padding: 2rem;
     text-align: center;
     background: linear-gradient(135deg, var(--secondary-color));
-    color: white;
+    color: rgb(0, 0, 0) !important;
 }
 
 .logo {
@@ -84,7 +84,7 @@ body {
     font-size: 1.8rem;
     font-weight: 600;
     margin-bottom: 0.5rem;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+    text-shadow: 1px 1px 2px rgba(255, 0, 0, 0.2);
 }
 
 .auth-header p {
