--- a/motuscar/login/static/css/home.css
+++ b/motuscar/login/static/css/home.css
@@ -2,7 +2,7 @@
     --primary: #FF4500;
     --primary-dark: #E03C00;
     --black: #000000;
-    --white: #FFFFFF;
+    --white: #ffffff;
     --gray-light: rgba(245, 245, 245, 0.8);
 }
 
